<resources>
    <string name="app_name">MuscleGain2000</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="GoogleSign">Sign in with Google</string>
    <string name="password_again">Password again</string>
    <string name="nickname">Nickname</string>
    <string name="registration">Regisztráció</string>
    <string name="login">Bejelentkezés</string>
    <string name="cancel">Mégsem</string>
    <string name="regiszter">Regisztráció</string>
    <string name="man">Férfi</string>
    <string name="woman">Nő</string>
    <string name="other">Egyéb</string>
    <string name="default_web_client_id">644131331783-6k7ac9jdiur49hmhr72q1nhtaovutjle.apps.googleusercontent.com</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="workouts">workouts</string>
    <string name="settings">settings</string>
    <string name="add_new_workout">Add new workout</string>
    <string name="name">Név</string>
    <string name="save">Save</string>
    <string name="new_workout_secsion">New Workout secsion</string>
    <string name="edit">Edit</string>
    <string name="start">Start</string>
    <string name="logout">Logout</string>
    <string name="give_it_a_name">Give it a name</string>
    <string name="select_image">SELECT IMAGE</string>


</resources>