<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/gray"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <RelativeLayout
        android:id="@+id/titlelogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@color/deepdarkgreen"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/editWorkoutTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:text="MuscleGainer"
            android:textAlignment="center"
            android:textColor="@color/lightgreen"
            android:textSize="60dp"
            android:textStyle="bold" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/lista20"
        app:layout_constraintBottom_toTopOf="@id/login"
        app:layout_constraintTop_toBottomOf="@id/titlelogin"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="30dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp">

            <TextView
                android:id="@+id/lgin_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="20dp"
                android:text="Login"
                android:textAlignment="center"
                android:textColor="@color/deepdarkgreen"
                android:textSize="40dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lgin_text"
                android:layout_marginTop="40dp"
                android:autofillHints="@string/prompt_email"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Email"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="448dp"
                android:autofillHints="@string/prompt_password"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true" />
        </RelativeLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="64dp"
        android:onClick="login"
        android:layout_marginHorizontal="40dp"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@id/Google_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.131" />

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="96dp"
        android:onClick="register"
        android:text="@string/registration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Google_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="28dp"
        android:onClick="loginWithGoogle"
        android:text="@string/GoogleSign"
        app:layout_constraintBottom_toTopOf="@id/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>